// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Jatkopäätökset should go through jatkopäätös1, epäaktiivinen, jatkopäätös2, and epäaktiivinen states successfully 1`] = `
Object {
  "description": "testImportJatkopaatos1vaiheAineistot",
  "obj": Object {
    "hyvaksymisPaatosVaihe": Object {
      "__typename": "HyvaksymisPaatosVaihe",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2160495081.1282714556",
          "jarjestys": 1,
          "kategoriaId": "T1xx",
          "nimi": "T113 TS Esite.txt",
          "tila": "ODOTTAA_TUONTIA",
        },
      ],
      "hallintoOikeus": "HAMEENLINNA",
      "hyvaksymisPaatoksenAsianumero": "jatkopaatos1_asianumero",
      "hyvaksymisPaatoksenPvm": "2020-01-01T00:00:00+02:00",
      "hyvaksymisPaatos": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": 1,
          "nimi": "TYHJÄ.txt",
          "tila": "ODOTTAA_TUONTIA",
        },
      ],
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 491,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 178,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 740,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2022-06-09",
      "kuulutusVaihePaattyyPaiva": "2100-01-01",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [
          "A000111",
        ],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "organisaatio": "",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "organisaatio": "",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
          },
        ],
      },
    },
    "kasittelynTila": Object {
      "__typename": "KasittelynTila",
      "ensimmainenJatkopaatos": Object {
        "__typename": "Hyvaksymispaatos",
        "aktiivinen": true,
        "asianumero": "jatkopaatos1_asianumero",
        "paatoksenPvm": "2020-01-01T00:00:00+02:00",
      },
      "hyvaksymispaatos": Object {
        "__typename": "Hyvaksymispaatos",
        "asianumero": "asianro123",
        "paatoksenPvm": "2022-06-09",
      },
      "toinenJatkopaatos": undefined,
    },
  },
}
`;

exports[`Jatkopäätökset should go through jatkopäätös1, epäaktiivinen, jatkopäätös2, and epäaktiivinen states successfully 2`] = `
Object {
  "yllapito S3 files jatkopäätös1 created": Object {
    "/1/T113 TS Esite.txt": Object {},
    "/1/paatos/TYHJÄ.txt": Object {},
  },
}
`;

exports[`Jatkopäätökset should go through jatkopäätös1, epäaktiivinen, jatkopäätös2, and epäaktiivinen states successfully 3`] = `
Object {
  "description": "testJatkoPaatos1VaiheAfterApproval",
  "obj": Object {
    "jatkoPaatos1Vaihe": Object {
      "__typename": "HyvaksymisPaatosVaihe",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2160495081.1282714556",
          "jarjestys": 1,
          "kategoriaId": "T1xx",
          "nimi": "T113 TS Esite.txt",
          "tiedosto": "/jatkopaatos1/1/T113 TS Esite.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
      ],
      "hallintoOikeus": "HAMEENLINNA",
      "hyvaksymisPaatoksenAsianumero": "jatkopaatos1_asianumero",
      "hyvaksymisPaatoksenPvm": "2020-01-01T00:00:00+02:00",
      "hyvaksymisPaatos": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": 1,
          "nimi": "TYHJÄ.txt",
          "tiedosto": "/jatkopaatos1/1/paatos/TYHJÄ.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
      ],
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 491,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 178,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 740,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2022-06-09",
      "kuulutusVaihePaattyyPaiva": "2100-01-01",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [
          "A000111",
        ],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "organisaatio": "",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "organisaatio": "",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
          },
        ],
      },
    },
    "jatkoPaatos1VaiheJulkaisut": Array [
      Object {
        "__typename": "HyvaksymisPaatosVaiheJulkaisu",
        "aineistoNahtavilla": Array [
          Object {
            "__typename": "Aineisto",
            "dokumenttiOid": "1.2.246.578.5.100.2160495081.1282714556",
            "jarjestys": 1,
            "kategoriaId": "T1xx",
            "nimi": "T113 TS Esite.txt",
            "tiedosto": "/jatkopaatos1/1/T113 TS Esite.txt",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
          },
        ],
        "hallintoOikeus": "HAMEENLINNA",
        "hyvaksyja": "A000112",
        "hyvaksymisPaatoksenAsianumero": "jatkopaatos1_asianumero",
        "hyvaksymisPaatoksenPvm": "2020-01-01T00:00:00+02:00",
        "hyvaksymisPaatos": Array [
          Object {
            "__typename": "Aineisto",
            "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
            "jarjestys": 1,
            "nimi": "TYHJÄ.txt",
            "tiedosto": "/jatkopaatos1/1/paatos/TYHJÄ.txt",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
          },
        ],
        "hyvaksymisPaatosVaihePDFt": Object {
          "SUOMI": Object {
            "__typename": "HyvaksymisPaatosVaihePDF",
            "hyvaksymisIlmoitusLausunnonantajillePDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/hyvaksymispaatos/T431_3 Ilmoitus hyvaksymispaatoksesta lausunnon antajille.pdf",
            "hyvaksymisIlmoitusMuistuttajillePDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/hyvaksymispaatos/T431_4 Ilmoitus hyvaksymispaatoksesta muistuttajille.pdf",
            "hyvaksymisKuulutusPDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/hyvaksymispaatos/T431 Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf",
            "ilmoitusHyvaksymispaatoskuulutuksestaKunnillePDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/hyvaksymispaatos/T431_1 Ilmoitus hyvaksymispaatoksesta kunnalle ja ELYlle.pdf",
            "ilmoitusHyvaksymispaatoskuulutuksestaToiselleViranomaisellePDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/hyvaksymispaatos/T431_2 Ilmoitus hyvaksymispaatoksen kuulutuksesta.pdf",
          },
          "__typename": "HyvaksymisPaatosVaihePDFt",
        },
        "id": 1,
        "ilmoituksenVastaanottajat": Object {
          "__typename": "IlmoituksenVastaanottajat",
          "kunnat": Array [
            Object {
              "__typename": "KuntaVastaanottaja",
              "id": 491,
              "lahetetty": "2022-03-11T14:54",
              "sahkoposti": "mikkeli@mikke.li",
            },
            Object {
              "__typename": "KuntaVastaanottaja",
              "id": 178,
              "lahetetty": "2022-03-11T14:54",
              "sahkoposti": "juva@ju.va",
            },
            Object {
              "__typename": "KuntaVastaanottaja",
              "id": 740,
              "lahetetty": "2022-03-11T14:54",
              "sahkoposti": "savonlinna@savonlin.na",
            },
          ],
          "viranomaiset": Array [
            Object {
              "__typename": "ViranomaisVastaanottaja",
              "lahetetty": "2022-03-11T14:54",
              "nimi": "ETELA_SAVO_ELY",
              "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
            },
          ],
        },
        "kielitiedot": Object {
          "__typename": "Kielitiedot",
          "ensisijainenKieli": "SUOMI",
        },
        "kuulutusPaiva": "2022-06-09",
        "kuulutusVaihePaattyyPaiva": "2100-01-01",
        "muokkaaja": "A000112",
        "tila": "HYVAKSYTTY",
        "velho": Object {
          "__typename": "Velho",
          "kunnat": Array [
            91,
            92,
          ],
          "linkki": null,
          "maakunnat": Array [
            1,
          ],
          "nimi": "HASSU AUTOMAATTITESTIPROJEKTI1",
          "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
          "tyyppi": "TIE",
          "varahenkilonEmail": "mikko.haapamaki02@cgi.com",
          "vastuuhenkilonEmail": "mikko.haapamki@cgi.com",
          "vaylamuoto": Array [
            "tie",
          ],
        },
        "yhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "A-tunnus1",
            "organisaatio": "CGI Suomi Oy",
            "puhelinnumero": "123",
            "sahkoposti": "mikko.haapamki@cgi.com",
            "sukunimi": "Hassu",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "organisaatio": "",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "organisaatio": "",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
          },
        ],
      },
    ],
  },
}
`;

exports[`Jatkopäätökset should go through jatkopäätös1, epäaktiivinen, jatkopäätös2, and epäaktiivinen states successfully 4`] = `
Object {
  "description": "publicProjektiJatkoPaatos1VaiheJulkinenAfterApproval",
  "obj": Object {
    "__typename": "HyvaksymisPaatosVaiheJulkaisuJulkinen",
    "aineistoNahtavilla": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2160495081.1282714556",
        "jarjestys": 1,
        "kategoriaId": "T1xx",
        "nimi": "T113 TS Esite.txt",
        "tiedosto": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/jatkopaatos1/1/T113 TS Esite.txt",
        "tuotu": "***unittest***",
      },
    ],
    "hallintoOikeus": "HAMEENLINNA",
    "hyvaksymisPaatoksenAsianumero": "jatkopaatos1_asianumero",
    "hyvaksymisPaatoksenPvm": "2020-01-01T00:00:00+02:00",
    "hyvaksymisPaatos": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
        "jarjestys": 1,
        "kategoriaId": undefined,
        "nimi": "TYHJÄ.txt",
        "tiedosto": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/jatkopaatos1/1/paatos/TYHJÄ.txt",
        "tuotu": "***unittest***",
      },
    ],
    "kielitiedot": Object {
      "__typename": "Kielitiedot",
      "ensisijainenKieli": "SUOMI",
    },
    "kuulutusPaiva": "2022-06-09",
    "kuulutusVaihePaattyyPaiva": "2100-01-01",
    "velho": Object {
      "__typename": "VelhoJulkinen",
      "asiatunnusELY": undefined,
      "asiatunnusVayla": undefined,
      "kunnat": Array [
        91,
        92,
      ],
      "kuvaus": undefined,
      "maakunnat": Array [
        1,
      ],
      "nimi": "HASSU AUTOMAATTITESTIPROJEKTI1",
      "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
      "toteuttavaOrganisaatio": undefined,
      "tyyppi": "TIE",
      "vaylamuoto": Array [
        "tie",
      ],
    },
    "yhteystiedot": Array [
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "A-tunnus1",
        "organisaatio": "CGI Suomi Oy",
        "puhelinnumero": "123",
        "sahkoposti": "mikko.haapamki@cgi.com",
        "sukunimi": "Hassu",
      },
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Etunimi",
        "organisaatio": "",
        "puhelinnumero": "0293121213",
        "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
        "sukunimi": "Sukunimi",
      },
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Joku",
        "organisaatio": "",
        "puhelinnumero": "02998765",
        "sahkoposti": "Joku.Jokunen@vayla.fi",
        "sukunimi": "Jokunen",
      },
    ],
  },
}
`;

exports[`Jatkopäätökset should go through jatkopäätös1, epäaktiivinen, jatkopäätös2, and epäaktiivinen states successfully 5`] = `
Object {
  "description": "testImportJatkopaatos2vaiheAineistot",
  "obj": Object {
    "hyvaksymisPaatosVaihe": Object {
      "__typename": "HyvaksymisPaatosVaihe",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2160495081.1282714556",
          "jarjestys": 1,
          "kategoriaId": "T1xx",
          "nimi": "T113 TS Esite.txt",
          "tila": "ODOTTAA_TUONTIA",
        },
      ],
      "hallintoOikeus": "HAMEENLINNA",
      "hyvaksymisPaatoksenAsianumero": "jatkopaatos2_asianumero",
      "hyvaksymisPaatoksenPvm": "2020-01-01T00:00:00+02:00",
      "hyvaksymisPaatos": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": 1,
          "nimi": "TYHJÄ.txt",
          "tila": "ODOTTAA_TUONTIA",
        },
      ],
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 491,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 178,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 740,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2022-06-09",
      "kuulutusVaihePaattyyPaiva": "2100-01-01",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [
          "A000111",
        ],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "organisaatio": "",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "organisaatio": "",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
          },
        ],
      },
    },
    "kasittelynTila": Object {
      "__typename": "KasittelynTila",
      "ensimmainenJatkopaatos": Object {
        "__typename": "Hyvaksymispaatos",
        "aktiivinen": true,
        "asianumero": "jatkopaatos1_asianumero",
        "paatoksenPvm": "2020-01-01T00:00:00+02:00",
      },
      "hyvaksymispaatos": Object {
        "__typename": "Hyvaksymispaatos",
        "asianumero": "asianro123",
        "paatoksenPvm": "2022-06-09",
      },
      "toinenJatkopaatos": Object {
        "__typename": "Hyvaksymispaatos",
        "asianumero": "jatkopaatos2_asianumero",
        "paatoksenPvm": "2020-01-01T00:00:00+02:00",
      },
    },
  },
}
`;

exports[`Jatkopäätökset should go through jatkopäätös1, epäaktiivinen, jatkopäätös2, and epäaktiivinen states successfully 6`] = `
Object {
  "yllapito S3 files jatkopäätös2 created": Object {
    "/1/T113 TS Esite.txt": Object {},
    "/1/paatos/TYHJÄ.txt": Object {},
  },
}
`;

exports[`Jatkopäätökset should go through jatkopäätös1, epäaktiivinen, jatkopäätös2, and epäaktiivinen states successfully 7`] = `
Object {
  "description": "testJatkoPaatos2VaiheAfterApproval",
  "obj": Object {
    "jatkoPaatos2Vaihe": Object {
      "__typename": "HyvaksymisPaatosVaihe",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2160495081.1282714556",
          "jarjestys": 1,
          "kategoriaId": "T1xx",
          "nimi": "T113 TS Esite.txt",
          "tiedosto": "/jatkopaatos1/1/T113 TS Esite.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
      ],
      "hallintoOikeus": "HAMEENLINNA",
      "hyvaksymisPaatoksenAsianumero": "jatkopaatos1_asianumero",
      "hyvaksymisPaatoksenPvm": "2020-01-01T00:00:00+02:00",
      "hyvaksymisPaatos": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": 1,
          "nimi": "TYHJÄ.txt",
          "tiedosto": "/jatkopaatos1/1/paatos/TYHJÄ.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
      ],
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 491,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 178,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 740,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2022-06-09",
      "kuulutusVaihePaattyyPaiva": "2100-01-01",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [
          "A000111",
        ],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "organisaatio": "",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "organisaatio": "",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
          },
        ],
      },
    },
    "jatkoPaatos2VaiheJulkaisut": Array [
      Object {
        "__typename": "HyvaksymisPaatosVaiheJulkaisu",
        "aineistoNahtavilla": Array [
          Object {
            "__typename": "Aineisto",
            "dokumenttiOid": "1.2.246.578.5.100.2160495081.1282714556",
            "jarjestys": 1,
            "kategoriaId": "T1xx",
            "nimi": "T113 TS Esite.txt",
            "tiedosto": "/jatkopaatos2/1/T113 TS Esite.txt",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
          },
        ],
        "hallintoOikeus": "HAMEENLINNA",
        "hyvaksyja": "A000112",
        "hyvaksymisPaatoksenAsianumero": "jatkopaatos2_asianumero",
        "hyvaksymisPaatoksenPvm": "2020-01-01T00:00:00+02:00",
        "hyvaksymisPaatos": Array [
          Object {
            "__typename": "Aineisto",
            "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
            "jarjestys": 1,
            "nimi": "TYHJÄ.txt",
            "tiedosto": "/jatkopaatos2/1/paatos/TYHJÄ.txt",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
          },
        ],
        "hyvaksymisPaatosVaihePDFt": Object {
          "SUOMI": Object {
            "__typename": "HyvaksymisPaatosVaihePDF",
            "hyvaksymisIlmoitusLausunnonantajillePDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/hyvaksymispaatos/T431_3 Ilmoitus hyvaksymispaatoksesta lausunnon antajille.pdf",
            "hyvaksymisIlmoitusMuistuttajillePDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/hyvaksymispaatos/T431_4 Ilmoitus hyvaksymispaatoksesta muistuttajille.pdf",
            "hyvaksymisKuulutusPDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/hyvaksymispaatos/T431 Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf",
            "ilmoitusHyvaksymispaatoskuulutuksestaKunnillePDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/hyvaksymispaatos/T431_1 Ilmoitus hyvaksymispaatoksesta kunnalle ja ELYlle.pdf",
            "ilmoitusHyvaksymispaatoskuulutuksestaToiselleViranomaisellePDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/hyvaksymispaatos/T431_2 Ilmoitus hyvaksymispaatoksen kuulutuksesta.pdf",
          },
          "__typename": "HyvaksymisPaatosVaihePDFt",
        },
        "id": 1,
        "ilmoituksenVastaanottajat": Object {
          "__typename": "IlmoituksenVastaanottajat",
          "kunnat": Array [
            Object {
              "__typename": "KuntaVastaanottaja",
              "id": 491,
              "lahetetty": "2022-03-11T14:54",
              "sahkoposti": "mikkeli@mikke.li",
            },
            Object {
              "__typename": "KuntaVastaanottaja",
              "id": 178,
              "lahetetty": "2022-03-11T14:54",
              "sahkoposti": "juva@ju.va",
            },
            Object {
              "__typename": "KuntaVastaanottaja",
              "id": 740,
              "lahetetty": "2022-03-11T14:54",
              "sahkoposti": "savonlinna@savonlin.na",
            },
          ],
          "viranomaiset": Array [
            Object {
              "__typename": "ViranomaisVastaanottaja",
              "lahetetty": "2022-03-11T14:54",
              "nimi": "ETELA_SAVO_ELY",
              "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
            },
          ],
        },
        "kielitiedot": Object {
          "__typename": "Kielitiedot",
          "ensisijainenKieli": "SUOMI",
        },
        "kuulutusPaiva": "2022-06-09",
        "kuulutusVaihePaattyyPaiva": "2100-01-01",
        "muokkaaja": "A000112",
        "tila": "HYVAKSYTTY",
        "velho": Object {
          "__typename": "Velho",
          "kunnat": Array [
            91,
            92,
          ],
          "linkki": null,
          "maakunnat": Array [
            1,
          ],
          "nimi": "HASSU AUTOMAATTITESTIPROJEKTI1",
          "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
          "tyyppi": "TIE",
          "varahenkilonEmail": "mikko.haapamaki02@cgi.com",
          "vastuuhenkilonEmail": "mikko.haapamki@cgi.com",
          "vaylamuoto": Array [
            "tie",
          ],
        },
        "yhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "A-tunnus1",
            "organisaatio": "CGI Suomi Oy",
            "puhelinnumero": "123",
            "sahkoposti": "mikko.haapamki@cgi.com",
            "sukunimi": "Hassu",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "organisaatio": "",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "organisaatio": "",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
          },
        ],
      },
    ],
  },
}
`;

exports[`Jatkopäätökset should go through jatkopäätös1, epäaktiivinen, jatkopäätös2, and epäaktiivinen states successfully 8`] = `
Object {
  "description": "publicProjektiJatkoPaatos2VaiheJulkinenAfterApproval",
  "obj": Object {
    "__typename": "HyvaksymisPaatosVaiheJulkaisuJulkinen",
    "aineistoNahtavilla": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2160495081.1282714556",
        "jarjestys": 1,
        "kategoriaId": "T1xx",
        "nimi": "T113 TS Esite.txt",
        "tiedosto": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/jatkopaatos2/1/T113 TS Esite.txt",
        "tuotu": "***unittest***",
      },
    ],
    "hallintoOikeus": "HAMEENLINNA",
    "hyvaksymisPaatoksenAsianumero": "jatkopaatos2_asianumero",
    "hyvaksymisPaatoksenPvm": "2020-01-01T00:00:00+02:00",
    "hyvaksymisPaatos": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
        "jarjestys": 1,
        "kategoriaId": undefined,
        "nimi": "TYHJÄ.txt",
        "tiedosto": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/jatkopaatos2/1/paatos/TYHJÄ.txt",
        "tuotu": "***unittest***",
      },
    ],
    "kielitiedot": Object {
      "__typename": "Kielitiedot",
      "ensisijainenKieli": "SUOMI",
    },
    "kuulutusPaiva": "2022-06-09",
    "kuulutusVaihePaattyyPaiva": "2100-01-01",
    "velho": Object {
      "__typename": "VelhoJulkinen",
      "asiatunnusELY": undefined,
      "asiatunnusVayla": undefined,
      "kunnat": Array [
        91,
        92,
      ],
      "kuvaus": undefined,
      "maakunnat": Array [
        1,
      ],
      "nimi": "HASSU AUTOMAATTITESTIPROJEKTI1",
      "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
      "toteuttavaOrganisaatio": undefined,
      "tyyppi": "TIE",
      "vaylamuoto": Array [
        "tie",
      ],
    },
    "yhteystiedot": Array [
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "A-tunnus1",
        "organisaatio": "CGI Suomi Oy",
        "puhelinnumero": "123",
        "sahkoposti": "mikko.haapamki@cgi.com",
        "sukunimi": "Hassu",
      },
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Etunimi",
        "organisaatio": "",
        "puhelinnumero": "0293121213",
        "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
        "sukunimi": "Sukunimi",
      },
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Joku",
        "organisaatio": "",
        "puhelinnumero": "02998765",
        "sahkoposti": "Joku.Jokunen@vayla.fi",
        "sukunimi": "Jokunen",
      },
    ],
  },
}
`;
